; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_libinput.c_set_scroll_method.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_libinput.c_set_scroll_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libinput_device = type { i32 }

@LIBINPUT_CONFIG_SCROLL_NO_SCROLL = common dso_local global i32 0, align 4
@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"scroll_set_method(%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.libinput_device*, i32)* @set_scroll_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_scroll_method(%struct.libinput_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.libinput_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.libinput_device* %0, %struct.libinput_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.libinput_device*, %struct.libinput_device** %4, align 8
  %8 = call i32 @libinput_device_config_scroll_get_methods(%struct.libinput_device* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @LIBINPUT_CONFIG_SCROLL_NO_SCROLL, align 4
  %11 = xor i32 %10, -1
  %12 = and i32 %9, %11
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %2
  %15 = load %struct.libinput_device*, %struct.libinput_device** %4, align 8
  %16 = call i32 @libinput_device_config_scroll_get_method(%struct.libinput_device* %15)
  %17 = load i32, i32* %5, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %14, %2
  store i32 0, i32* %3, align 4
  br label %28

20:                                               ; preds = %14
  %21 = load i32, i32* @SWAY_DEBUG, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @sway_log(i32 %21, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load %struct.libinput_device*, %struct.libinput_device** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @libinput_device_config_scroll_set_method(%struct.libinput_device* %24, i32 %25)
  %27 = call i32 @log_status(i32 %26)
  store i32 1, i32* %3, align 4
  br label %28

28:                                               ; preds = %20, %19
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @libinput_device_config_scroll_get_methods(%struct.libinput_device*) #1

declare dso_local i32 @libinput_device_config_scroll_get_method(%struct.libinput_device*) #1

declare dso_local i32 @sway_log(i32, i8*, i32) #1

declare dso_local i32 @log_status(i32) #1

declare dso_local i32 @libinput_device_config_scroll_set_method(%struct.libinput_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
